Miscellaneous CSSParser dodging in presentation attribute parsing. <http://webkit.org/b/79468>

Reviewed by Antti Koivisto.

- Bypass CSSParser when adding constant values to attribute styles.
- Added fast paths for the valid HTMLTablePartElement align values.

* html/HTMLEmbedElement.cpp:
(WebCore::HTMLEmbedElement::collectStyleForAttribute):
* html/HTMLHRElement.cpp:
(WebCore::HTMLHRElement::collectStyleForAttribute):
* html/HTMLIFrameElement.cpp:
(WebCore::HTMLIFrameElement::collectStyleForAttribute):
* html/HTMLTableElement.cpp:
(WebCore::HTMLTableElement::collectStyleForAttribute):
* html/HTMLTablePartElement.cpp:
(WebCore::HTMLTablePartElement::collectStyleForAttribute):


Canonical link: https://commits.webkit.org/96541@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108765 268f45cc-cd09-0410-ab3c-d52691b4dbfc